# SWIM-Visualization

./: .gitignore  CMakeLists.txt  main.cpp
drawers/: Details.cpp  Details.h  Details.ui  MainWidget.cpp  MainWidget.h  MainWidget.ui  MemberDrawer.cpp  MemberDrawer.h  MemberDrawer2.cpp  MemberDrawer2.h  MessageDrawer.cpp  MessageDrawer.h  MessageEnvironmentForDrawers.cpp  MessageEnvironmentForDrawers.h  VisualTimer.cpp  VisualTimer.h
structures/: IMemberEnvironment.h  IMessageEnvironment.h  ITimer.h  Member.cpp  Member.h  Message.cpp  Message.h
